--- a/RoutingHTTPServer.xcodeproj/xcshareddata/xcschemes/RoutingHTTPServer tvOS.xcscheme
+++ b/RoutingHTTPServer.xcodeproj/xcshareddata/xcschemes/RoutingHTTPServer tvOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1CC3198B2195D038003F0325"
-               BuildableName = "RoutingHTTPServer tvOS.framework"
+               BuildableName = "RoutingHTTPServer.framework"
                BlueprintName = "RoutingHTTPServer tvOS"
                ReferencedContainer = "container:RoutingHTTPServer.xcodeproj">
             </BuildableReference>
@@ -29,8 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -46,13 +44,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1CC3198B2195D038003F0325"
-            BuildableName = "RoutingHTTPServer tvOS.framework"
+            BuildableName = "RoutingHTTPServer.framework"
             BlueprintName = "RoutingHTTPServer tvOS"
             ReferencedContainer = "container:RoutingHTTPServer.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -64,7 +60,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1CC3198B2195D038003F0325"
-            BuildableName = "RoutingHTTPServer tvOS.framework"
+            BuildableName = "RoutingHTTPServer.framework"
             BlueprintName = "RoutingHTTPServer tvOS"
             ReferencedContainer = "container:RoutingHTTPServer.xcodeproj">
          </BuildableReference>
